# celery-operational-error

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml
src/: config.py  tasks.py
